--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,6 @@ body{
 }
 #container{
     width:100%;
-    border: 1px solid yellow;
     margin:auto;
 }
 .col-12{
@@ -130,4 +129,7 @@ select {
 .container2 {
     position: relative;
     width: 50%;
+}
+.item_sobre {
+    display: inline-block
 }
